show more than one digits in the result bar to calculate

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         }
 
         function calculator(newValue){
-            document.getElementById("MyResult").value = newValue
+            document.getElementById("MyResult").value += newValue
         }
 
         function answer(){
