--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <script>
         function deleteMe(){
-            
+            document.getElementById("MyResult").value = "";
         }
 
         function calculator(newValue){
